# langchain_projects

./: .gitignore  README.md
dbt_sql_gpt/: app.py  main.py  main_async.py  main_dumb.py  main_no_agent.py  memory.json  pyproject.toml  sample.py
dbt_sql_gpt/dbt_sql_gpt/: base_serving.py  bigquery_client.py  chat_model_start_handler.py  custom_file_chat_message_history.py  dbt_loader.py  my_sql_tool.py  my_sql_tool_async.py  ollama_serving.py  open_ai_serving.py
dbt_sql_gpt/static/css/: styles.css
dbt_sql_gpt/templates/: base.html  index.html  upload.html
dbt_sql_gpt/test_directory/: attribution_touches.yaml  customers.yaml
dbt_sql_gpt/tests/: dbt_loader_test.py
dbt_sql_gpt/tests/test_directory/: attribution_touches.yaml
k8s_prompt/: main.py  pyproject.toml
llm_from_scratch/: ddp_script.py  main.py  model.pth  pyproject.toml  pytorch_stuff.py
