[tool.poetry]
name = "k8s-prompt"
version = "0.1.0"
description = ""
authors = ["Carlo Scarioni <carlo.scarioni@mettle.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.1.20"
openai = "1.28.2"
python-dotenv = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
