[tool.poetry]
name = "llm-from-scratch"
version = "0.1.0"
description = ""
authors = ["Carlo Scarioni <carlo.scarioni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tiktoken = "*"
torch = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
